--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,8 @@
 #все равно под контролем ( RestoreJD2016.cmd )
 out/
 out-test/
-.idea
-*.iml
+#.idea
+#*.iml
 workspace.xml
 
 # virtual machine crash logs
