--- a/src/by/it/tsiamruk/project/webapp/WEB-INF/web.xml
+++ b/src/by/it/tsiamruk/project/webapp/WEB-INF/web.xml
@@ -8,29 +8,14 @@
     <!--
     Для любого сервлета нужно определить два тега servlet и servlet-mapping.
     Важно чтобы внутри каждого из этих тегов были теги servlet-name
-    и имя сервлета в них было одинаковым!!! Здесь это имя HelloWorld
+    и имя сервлета в них было одинаковым!!! Здесь это имя Controller
     -->
     <servlet>
-        <servlet-name>HelloWorld</servlet-name>
-        <servlet-class>by.it.akhmelev.jd03_04.java.HelloWorld</servlet-class>
+        <servlet-name>Controller</servlet-name>
+        <servlet-class>by.it.tsiamruk.project.java.controller.FrontController</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>HelloWorld</servlet-name>
-        <url-pattern>/hello</url-pattern>
-    </servlet-mapping>
-
-    <!--
-    Подключим точно так же второй сервлета-контроллер с именем FrontControllerServlet
-    -->
-    <servlet>
-        <servlet-name>FrontControllerServlet</servlet-name>
-        <servlet-class>by.it.akhmelev.jd03_04.java.sample_controller.FrontController</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>FrontControllerServlet</servlet-name>
+        <servlet-name>Controller</servlet-name>
         <url-pattern>/do</url-pattern>
     </servlet-mapping>
-
-
-
 </web-app>
