--- a/src/by/it/akhmelev/project/webapp/WEB-INF/web.xml
+++ b/src/by/it/akhmelev/project/webapp/WEB-INF/web.xml
@@ -18,4 +18,9 @@
         <servlet-name>Controller</servlet-name>
         <url-pattern>/do</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Controller</servlet-name>
+        <url-pattern></url-pattern>
+    </servlet-mapping>
+
 </web-app>
