--- a/src/by/it/emelyanov/project/webapp/WEB-INF/web.xml
+++ b/src/by/it/emelyanov/project/webapp/WEB-INF/web.xml
@@ -23,4 +23,18 @@
         <servlet-name>Controller</servlet-name>
         <url-pattern></url-pattern>
     </servlet-mapping>
+
+    <filter>
+        <filter-name>UTF8Filter</filter-name>
+        <filter-class>by.it.emelyanov.project.java.controller.UTF8Filter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>UTF8Filter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
 </web-app>
