--- a/src/by/it/akhmelev/project/webapp/WEB-INF/web.xml
+++ b/src/by/it/akhmelev/project/webapp/WEB-INF/web.xml
@@ -23,4 +23,18 @@
         <url-pattern></url-pattern>
     </servlet-mapping>
 
+    <!-- фильтры -->
+    <filter>
+        <filter-name>FilterUTF8</filter-name>
+        <filter-class>by.it.akhmelev.project.java.filters.FilterUTF8</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>FilterUTF8</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
 </web-app>
