--- a/src/by/it/grishechkin/project/webapp/WEB-INF/web.xml
+++ b/src/by/it/grishechkin/project/webapp/WEB-INF/web.xml
@@ -18,6 +18,10 @@
         <servlet-name>HelloWorld</servlet-name>
         <url-pattern>/hello</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>HelloWorld</servlet-name>
+        <url-pattern></url-pattern>
+    </servlet-mapping>
 
 
 </web-app>
