--- a/src/by/it/tsiamruk/project/webapp/WEB-INF/web.xml
+++ b/src/by/it/tsiamruk/project/webapp/WEB-INF/web.xml
@@ -11,19 +11,19 @@
     и имя сервлета в них было одинаковым!!! Здесь это имя Controller
     -->
     <servlet>
-        <servlet-name>Controller</servlet-name>
+        <servlet-name>FrontController</servlet-name>
         <servlet-class>by.it.tsiamruk.project.java.controller.FrontController</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>Controller</servlet-name>
+        <servlet-name>FrontController</servlet-name>
         <url-pattern>/do</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>Controller</servlet-name>
+        <servlet-name>FrontController</servlet-name>
         <url-pattern></url-pattern>
     </servlet-mapping>
     <filter>
-        <filter-name>EncodingUTF8</filter-name>
+        <filter-name>FilterUTF8</filter-name>
         <filter-class>by.it.tsiamruk.project.java.controller.FilterUTF8</filter-class>
         <init-param>
             <param-name>encoding</param-name>
@@ -31,8 +31,7 @@
         </init-param>
     </filter>
     <filter-mapping>
-        <filter-name>EncodingUTF8</filter-name>
+        <filter-name>FilterUTF8</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-
 </web-app>
