--- a/src/by/it/sukora/PROJECT/webapp/WEB-INF/web.xml
+++ b/src/by/it/sukora/PROJECT/webapp/WEB-INF/web.xml
@@ -13,24 +13,60 @@
     <servlet>
         <servlet-name>FrontController</servlet-name>
         <servlet-class>by.it.sukora.PROJECT.java.sample_controller.FrontController</servlet-class>
+
+        <init-param>
+            <param-name>URL_DB</param-name>
+            <param-value>jdbc:mysql://127.0.0.1:2016/test_hospital?useUnicode=true&amp;characterEncoding=UTF-8</param-value>
+        </init-param>
+
+        <init-param>
+            <param-name>USER_DB</param-name>
+            <param-value>root</param-value>
+        </init-param>
+
+        <init-param>
+            <param-name>PASSWORD_DB</param-name>
+            <param-value></param-value>
+        </init-param>
+
     </servlet>
+
+
+
+
     <servlet-mapping>
         <servlet-name>FrontController</servlet-name>
         <url-pattern>/do</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>FrontController</servlet-name>
+        <url-pattern/>
+    </servlet-mapping>
 
-    <!--
-    Подключим точно так же второй сервлета-контроллер с именем FrontControllerServlet
--->
-    <!--<servlet>-->
-        <!--<servlet-name>FrontControllerServlet</servlet-name>-->
-        <!--<servlet-class>by.it.sukora.PROJECT.java.sample_controller.FrontController</servlet-class>-->
-    <!--</servlet>-->
-    <!--<servlet-mapping>-->
-        <!--<servlet-name>FrontControllerServlet</servlet-name>-->
-        <!--<url-pattern>/do</url-pattern>-->
-    <!--</servlet-mapping>-->
+    <filter>
+        <filter-name>FilterUTF8</filter-name>
+        <filter-class>by.it.sukora.PROJECT.java.filters.FilterUTF8</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>FilterUTF8</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
+    <description>MySQL my_sql_sukora</description>
+    <resource-ref>
+        <description>my_sql_sukora</description>
+        <res-ref-name>jdbc/my_sql_sukora</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
 
+    <!-- слушатели событий -->
+    <listener>
+        <listener-class>by.it.sukora.PROJECT.java.filters.SessionAttributeListener</listener-class>
+    </listener>
 
 </web-app>
