--- a/src/by/it/sukora/PROJECT/webapp/WEB-INF/web.xml
+++ b/src/by/it/sukora/PROJECT/webapp/WEB-INF/web.xml
@@ -58,8 +58,8 @@
 
     <description>MySQL my_sql_sukora</description>
     <resource-ref>
-        <description>my_sql_sukora</description>
-        <res-ref-name>jdbc/my_sql_sukora</res-ref-name>
+        <description>test_hospital</description>
+        <res-ref-name>jdbc/test_hospital</res-ref-name>
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
     </resource-ref>
