--- a/src/by/it/vashukevich/project/webapp/WEB-INF/web.xml
+++ b/src/by/it/vashukevich/project/webapp/WEB-INF/web.xml
@@ -18,4 +18,22 @@
         <servlet-name>Controller</servlet-name>
         <url-pattern>/do</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Controller</servlet-name>
+        <url-pattern></url-pattern>
+    </servlet-mapping>
+
+    <!-- фильтры -->
+    <!--<filter>
+        <filter-name>FiltrUTF8</filter-name>
+        <filter-class>by.it.vashukevich.project.java.filters.FiltrUTF8</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>FiltrUTF8</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>-->
 </web-app>
